<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/tx_loader"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalScrollView" />

    <TextView
        android:id="@+id/tx_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="@+id/horizontalScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalScrollView" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/title_header"
                        style="@style/table"
                        android:text="@string/title"
                        android:textSize="@dimen/sp20"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/transaction_ref_header"
                        style="@style/table"
                        android:layout_height="wrap_content"
                        android:text="@string/transaction_ref"
                        android:textSize="@dimen/sp20"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/amount_header"
                        style="@style/table"
                        android:text="@string/amount"
                        android:textSize="@dimen/sp20"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/method_header"
                        style="@style/table"
                        android:layout_width="@dimen/table_width"
                        android:layout_height="@dimen/table_height"
                        android:text="@string/method"
                        android:textSize="@dimen/sp20" />

                    <TextView
                        android:id="@+id/transaction_id_header"
                        style="@style/table"
                        android:text="@string/tid"
                        android:textSize="@dimen/sp20" />

                    <TextView
                        android:id="@+id/key_used_header"
                        style="@style/table"
                        android:layout_height="wrap_content"
                        android:text="@string/key_used"
                        android:textSize="@dimen/sp20" />

                    <TextView
                        android:id="@+id/semester_header"
                        style="@style/table"
                        android:text="@string/semester"
                        android:textSize="@dimen/sp20" />

                    <TextView
                        android:id="@+id/year_header"
                        style="@style/table"
                        android:text="@string/year"
                        android:textSize="@dimen/sp20" />

                    <TextView
                        android:id="@+id/level_header"
                        style="@style/table"
                        android:text="@string/level"
                        android:textSize="@dimen/sp20" />

                    <TextView
                        android:id="@+id/department_header"
                        style="@style/table"
                        android:text="@string/department"
                        android:textSize="@dimen/sp20" />

                    <TextView
                        android:id="@+id/faculty_header"
                        style="@style/table"
                        android:text="@string/faculty"
                        android:textSize="@dimen/sp20" />

                    <TextView
                        android:id="@+id/school_header"
                        style="@style/table"
                        android:text="@string/school"
                        android:textSize="@dimen/sp20" />

                    <TextView
                        android:id="@+id/user_email_header"
                        style="@style/table"
                        android:text="@string/UserEmail"
                        android:textSize="@dimen/sp20" />
                </TableRow>

            </TableLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tx_table_rcv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="45"
                tools:listitem="@layout/transaction_table_item" />

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>