<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient">

        <TextView
            android:id="@+id/app_titlr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp32"
            android:text="@string/name_app"
            android:textColor="@color/white"
            android:textSize="@dimen/sp26"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/app_title_division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adim"
            android:textColor="@color/white"
            android:textSize="@dimen/sp18"
            app:layout_constraintEnd_toEndOf="@+id/app_titlr"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/app_titlr"
            app:layout_constraintTop_toBottomOf="@+id/app_titlr" />

        <TextView
            android:id="@+id/screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/admin_login"
            android:textColor="@color/white"
            android:textSize="@dimen/sp32"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_title_division" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="@dimen/dp32"
            android:layout_marginTop="@dimen/dp8"
            android:layout_marginEnd="@dimen/dp32"
            android:background="#DFD4D4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/screen_title" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp18"
            android:layout_marginTop="@dimen/dp22"
            android:layout_marginEnd="@dimen/dp18"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/email_input"
            app:layout_constraintStart_toStartOf="@+id/email_input"
            app:layout_constraintTop_toBottomOf="@+id/email_input" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp32"
            android:background="@drawable/bg_round_orange"
            android:elevation="6dp"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/password_input"
            app:layout_constraintStart_toStartOf="@+id/password_input"
            app:layout_constraintTop_toBottomOf="@+id/password_input" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>