<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/keys_table_main"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TableLayout
                    android:id="@+id/key_table_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"></LinearLayout>

                        <TextView
                            android:id="@+id/key_col"
                            style="@style/table"
                            android:text="@string/keys" />

                        <TextView
                            android:id="@+id/vendor_col"
                            style="@style/table"
                            android:text="@string/vendor" />

                        <TextView
                            android:id="@+id/price_col"
                            style="@style/table"
                            android:text="@string/price" />

                        <TextView
                            android:id="@+id/is_used_col"
                            style="@style/table"
                            android:text="@string/is_used" />

                        <TextView
                            android:id="@+id/used_by"
                            style="@style/table"
                            android:text="@string/used_by" />
                    </TableRow>

                </TableLayout>

                <TextView
                    android:id="@+id/key_no_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.20"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/lisense_keys_rcv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/key_table_header"
                    tools:listitem="@layout/keys_row_rcv_item" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </HorizontalScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/keys_loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99FFFFFF"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar6"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>