<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/bg_jumbo"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_pq_label"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp12"
            app:layout_constraintEnd_toStartOf="@+id/n_v2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/n_v1"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/course_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:hint="@string/course_title"
                android:visibility="visible" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/n_v1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/n_v2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp12"
            app:layout_constraintEnd_toStartOf="@+id/n_v2"
            app:layout_constraintStart_toStartOf="@+id/n_v1"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/end_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/end_year"
                android:visibility="visible" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp12"
            app:layout_constraintEnd_toStartOf="@+id/n_v2"
            app:layout_constraintStart_toStartOf="@+id/n_v1"
            app:layout_constraintTop_toBottomOf="@+id/pq_name_to_upload">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/start_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:hint="@string/start_year"
                android:visibility="visible" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/select_pq_from_storage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp12"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="src_in"
            android:text="@string/select_pq"
            android:textColor="@color/bg_jumbo"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/n_v2"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

        <ImageButton
            android:id="@+id/cancel_to_upload_btn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:backgroundTint="#FFFFFF"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/pq_name_to_upload"
            app:layout_constraintEnd_toStartOf="@+id/n_v2"
            app:layout_constraintTop_toTopOf="@+id/pq_name_to_upload"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
            app:tint="@color/bg_jumbo" />

        <Button
            android:id="@+id/start_upload_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/upload"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_pq_from_storage" />

        <TextView
            android:id="@+id/pq_name_to_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp12"
            android:gravity="center"
            android:paddingStart="@dimen/dp12"
            android:paddingEnd="@dimen/dp12"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/cancel_to_upload_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            tools:text="2021 stc 221pq.pdf" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>